# dippy-bittensor-subnet

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  auto_updating_validator.sh  evaluator.Dockerfile  leaderboard.csv  min_compute.yml  modelq.Dockerfile  pyproject.toml  pyproject_api.toml  requirements.api.txt  requirements.eval.txt  requirements.miner.txt  requirements.txt  requirements.validator.txt  requirements_val.txt  requirements_val_api.txt  v9test.py  vapi.Dockerfile  vapilogs
common/: data.py  local_metadata.py  scores.py
constants/: __init__.py
dippy/: README.md  dataset.py  playground.ipynb  predicted_generation_sanity_check.py  test_validation_api.py  validation_api.py
dippy_subnet/: .env.example  check_model.py  miner_example.py  upload_model.py
dippy_validation_api/: README.md  coherence_score.py  dataset.py  docker_run.py  duplicate.py  entrypoint.py  eval_score_api.py  evaluator.py  kill_validation_api.sh  kill_validation_api_batch.sh  kill_validation_api_solo.sh  maintenance.py  persistence.py  playground.ipynb  predicted_generation_sanity_check.py  purge_validation_service.sh  run_maintenance.sh  start_validation_service.sh  start_validation_service_batch.sh  start_validation_service_solo.sh  test_api.py  test_get_eval_score.py  testing_ground.ipynb  validation_api.py  validation_api.py.bak  validation_api_batch.py  vapi-compose.yml  vapi.Dockerfile  vibe_score_api.py
docs/: FAQ.md  block_4850000_reset.md  block_5148456_reset.md  block_5207777_reset.md  dataset_api.md  llm_scoring.md  miner.md  subnet_token.md  token_check.py  (+1 more)
(+89 files in other folders)
